fix: add padding-bottom to project container for improved spacing

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -85,6 +85,7 @@
         gap: 1rem;
         width: 80vw;
         height: 100px;
+        padding-bottom: 5px;
     }
 
     .img {
